deployment/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: LoadBalancer
  selector:
    app: hello-kubernetes
  ports:
  - port: 80
    targetPort: 80
