deployment/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-app
  namespace: webapp
spec:
  rules:
  - host: hello-world.chriscarty.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes
          servicePort: 80
